--- a/AssignmentC4/AssignmentC4/AssignmentC4.csproj
+++ b/AssignmentC4/AssignmentC4/AssignmentC4.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Data\**" />
+    <Content Remove="Areas\Data\**" />
+    <EmbeddedResource Remove="Areas\Data\**" />
+    <None Remove="Areas\Data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\css\.DS_Store" />
     <None Include="wwwroot\css\css\.DS_Store" />
     <None Include="wwwroot\css\css\mixins\.DS_Store" />
@@ -17,10 +24,6 @@
     <None Include="wwwroot\fonts\ionicons\fonts\.DS_Store" />
     <None Include="wwwroot\images\.DS_Store" />
     <None Include="wwwroot\js\.DS_Store" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Data\" />
   </ItemGroup>
 
 </Project>
