--- a/AssignmentC4/.gitignore
+++ b/AssignmentC4/.gitignore
@@ -1,7 +1,41 @@
- bin/
- obj/
- *.user
- *.cache
- *.db
- *.db-shm
- *.db-wal
+# Build Folders
+bin/
+obj/
+
+# Visual Studio
+.vs/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Rider
+.idea/
+
+# OS generated
+.DS_Store
+Thumbs.db
+
+# NuGet
+*.nupkg
+*.snupkg
+packages/
+.nuget/
+
+# EF Core Migrations
+Migrations/
+
+# Cache
+*.cache
+
+# Database
+*.db
+*.db-shm
+*.db-wal
+
+# Publish
+*.Publish.xml
+publish/
+
+# Logs
+*.log
