Làm hiển thị chi tiết sản phẩm và hiển thị trang chủ

--- a/AssignmentC4/AssignmentC4/appsettings.json
+++ b/AssignmentC4/AssignmentC4/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ShoeStoreDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=ShoeStoreDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "YoLaConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=DuAnC4;Integrated Security=True;TrustServerCertificate=True"
   },
   "AppSettings": {
     "SiteName": "Giày Đẹp",
