--- a/AssignmentC4/AssignmentC4/appsettings.json
+++ b/AssignmentC4/AssignmentC4/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ShoeStoreDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "PhuVanConnection": "Data Source=.;Initial Catalog=ShopGiay_L4;Integrated Security=True;Trust Server Certificate=True;",
     "YoLaConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=DuAnC4;Integrated Security=True;TrustServerCertificate=True"
   },
   "AppSettings": {
